log
mi., 26 de mar. de 2025  8:55:17: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:32:5: error: unknown type name 'list'
     list *lista = (list*) malloc(sizeof(list));
     ^~~~
list.c:32:20: error: 'list' undeclared (first use in this function)
     list *lista = (list*) malloc(sizeof(list));
                    ^~~~
list.c:32:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:25: error: expected expression before ')' token
     list *lista = (list*) malloc(sizeof(list));
                         ^
list.c:35:6: error: expected ';' before 'return'
      return list;
      ^~~~~~
list.c:32:11: error: unused variable 'lista' [-Werror=unused-variable]
     list *lista = (list*) malloc(sizeof(list));
           ^~~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
mi., 26 de mar. de 2025  8:55:30: 
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:32:5: error: unknown type name 'list'
     list *lista = (list*) malloc(sizeof(list));
     ^~~~
list.c:32:20: error: 'list' undeclared (first use in this function)
     list *lista = (list*) malloc(sizeof(list));
                    ^~~~
list.c:32:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:25: error: expected expression before ')' token
     list *lista = (list*) malloc(sizeof(list));
                         ^
list.c:35:6: error: expected ';' before 'return'
      return list;
      ^~~~~~
list.c:32:11: error: unused variable 'lista' [-Werror=unused-variable]
     list *lista = (list*) malloc(sizeof(list));
           ^~~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1bd663b
mi., 26 de mar. de 2025  8:55:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:32:5: error: unknown type name 'list'
     list *list = (list*) malloc(sizeof(list));
     ^~~~
list.c:32:24: error: expected expression before ')' token
     list *list = (list*) malloc(sizeof(list));
                        ^
list.c:33:9: error: request for member 'head' in something not a structure or union
     list->head = NULL;
         ^~
list.c:34:9: error: request for member 'current' in something not a structure or union
     list->current = NULL
         ^~
list.c:35:5: error: expected ';' before 'return'
     return list;
     ^~~~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4d7df3c
mi., 26 de mar. de 2025  8:57:22: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:35:5: error: expected ';' before 'return'
     return list;
     ^~~~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
63e0856
mi., 26 de mar. de 2025  8:57:45: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ef40823
mi., 26 de mar. de 2025  8:59:50: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
92f1e38
mi., 26 de mar. de 2025  9:05:20: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bc64ff5
mi., 26 de mar. de 2025  9:08:11: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:22: error: 'Node {aka struct Node}' has no member named 'tail'
     return list->head->tail;
                      ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c738c4e
mi., 26 de mar. de 2025  9:08:47: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3cc300
mi., 26 de mar. de 2025  9:10:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:15: error: 'Node {aka struct Node}' has no member named 'dato'; did you mean 'data'?
     list->head->dato;
               ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8b2d2ca
mi., 26 de mar. de 2025  9:10:17: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:15: error: statement with no effect [-Werror=unused-value]
     list->head->data;
     ~~~~~~~~~~^~~~~~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b870651
mi., 26 de mar. de 2025  9:12:00: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0b2821f
mi., 26 de mar. de 2025  9:13:02: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0735575
mi., 26 de mar. de 2025  9:13:33: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b4b9477
mi., 26 de mar. de 2025  9:13:56: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9dc3d44
mi., 26 de mar. de 2025  9:15:43: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8045635
mi., 26 de mar. de 2025  9:16:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
098f070
mi., 26 de mar. de 2025  9:16:51: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b7e0dcb
mi., 26 de mar. de 2025  9:17:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
101ef0b
mi., 26 de mar. de 2025  9:27:48: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
074aed6
